feat(client): - Client funnel created (model,repo,service,controller,form front end)

--- a/compose.yaml
+++ b/compose.yaml
@@ -8,6 +8,7 @@ services:
     environment:
       POSTGRES_USER: salman
       POSTGRES_PASSWORD: secret
+      POSTGRES_DB: market
     volumes:
       - pgdata_mfi:/var/lib/postgresql/data
 volumes:
