--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,11 @@ spring.application.name=MFI
 spring.datasource.url=jdbc:postgresql://0.0.0.0:5432/market
 spring.datasource.username=salman
 spring.datasource.password=secret
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-
+spring.jpa.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+debug=true
+logging.level.root=DEBUG
+logging.level.org.springframework=DEBUG
 server.port=8082
